this will make the green bars appear in the correct order on mobile

--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ html {
   height: 100%;
   scroll-behavior: smooth;
   height: 100%;
-  overflow-x: hidden; 
+  overflow-x: hidden;
 }
 
 body {
@@ -17,7 +17,7 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  overflow-x: hidden; 
+  overflow-x: hidden;
 }
 
 nav {
@@ -133,6 +133,7 @@ h2 {
   color: rgb(255, 255, 255);
   font-family: "Courier New", Courier, monospace;
   font-size: 3rem;
+  line-height: 4rem;
   font-weight: 500;
 }
 
@@ -157,7 +158,7 @@ h2 {
   max-width: 60rem;
   font-size: 1.8rem;
   font-family: Arial, Helvetica, sans-serif;
-  gap: 2rem;;
+  gap: 2rem;
 }
 
 #description {
@@ -170,6 +171,7 @@ h2 {
   height: 4rem;
   display: flex;
   align-items: center;
+  order: 4;
 }
 
 #green-bar {
@@ -191,14 +193,14 @@ h2 {
 }
 
 #portfolio-area {
-  min-height: 45rem;
+  min-height: 40rem;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
 #portfolio-container {
-  min-height: 45rem;
+  min-height: 40rem;
   display: flex;
   gap: 5rem;
   justify-content: center;
@@ -212,10 +214,16 @@ h2 {
 #portfolio-left {
   display: flex;
   flex-direction: column;
-  gap: 10rem;
   max-width: 100%;
   align-items: center;
   justify-content: center;
+  position: relative;
+}
+
+#portfolio-title {
+  margin-top: 0;
+  top: 0;
+  left: 0;
 }
 
 #portfolio-left-image {
@@ -236,10 +244,10 @@ h2 {
 
 span {
   color: grey;
-  font-size: 2rem;
+  font-size: 2.4rem;
 }
 
-@media (max-width: 500px) {
+@media (max-width: 1000px) {
   #picture-and-name {
     max-width: 80%;
     min-height: 56rem;
